--- a/index.html
+++ b/index.html
@@ -130,28 +130,28 @@
                     <ul class="command-list">
                         <li class="command-item">
                             <a class="command-icon" href="#">
-                                <svg  widht="20" height="20">
+                                <svg class="command-svg">
                                     <use href="./images/icons.svg#icon-instagram2"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="command-item">
                             <a class="command-icon" href="#">
-                                <svg  widht="20" height="20">
+                                <svg class="command-svg">
                                     <use href="./images/icons.svg#icon-twitter1"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="command-item">
                             <a class="command-icon" href="#">
-                                <svg widht="20" height="20">
+                                <svg class="command-svg">
                                     <use href="./images/icons.svg#icon-facebook1"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="command-item">
                             <a class="command-icon" href="#">
-                                <svg widht="20" height="20">
+                                <svg class="command-svg">
                                     <use href="./images/icons.svg#icon-linkedin1"></use>
                                 </svg>
                             </a>
@@ -167,28 +167,28 @@
                     <ul class="command-list">
                     <li class="command-item">
                         <a class="command-icon" href="#">
-                                <svg widht="20" height="20">
+                                <svg class="command-svg">
                                     <use href="./images/icons.svg#icon-instagram2"></use>
                                 </svg>
                             </a>
                         </li>
                     <li class="command-item">
                         <a class="command-icon" href="#">
-                            <svg  widht="20" height="20">
+                            <svg  class="command-svg">
                                 <use href="./images/icons.svg#icon-twitter1"></use>
                             </svg>
                         </a>
                         </li>
                     <li class="command-item">
                         <a class="command-icon" href="#">
-                                <svg widht="20" height="20">
+                                <svg class="command-svg">
                                     <use href="./images/icons.svg#icon-facebook1"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="command-item">
                             <a class="command-icon" href="#">
-                                <svg widht="20" height="20">
+                                <svg class="command-svg">
                                     <use href="./images/icons.svg#icon-linkedin1"></use>
                                 </svg>
                             </a>
@@ -204,28 +204,28 @@
                     <ul class="command-list">
                     <li class="command-item">
                         <a class="command-icon" href="#">
-                                <svg widht="20" height="20">
+                                <svg class="command-svg">
                                     <use href="./images/icons.svg#icon-instagram2"></use>
                                 </svg>
                             </a>
                         </li>
                     <li class="command-item">
                         <a class="command-icon" href="#">
-                                <svg widht="20" height="20">
+                                <svg class="command-svg">
                                     <use href="./images/icons.svg#icon-twitter1"></use>
                                 </svg>
                             </a>
                         </li>
                     <li class="command-item">
                         <a class="command-icon" href="#">
-                                <svg widht="20" height="20">
+                                <svg class="command-svg">
                                     <use href="./images/icons.svg#icon-facebook1"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="command-item">
                             <a class="command-icon" href="#">
-                                <svg widht="20" height="20">
+                                <svg class="command-svg">
                                     <use href="./images/icons.svg#icon-linkedin1"></use>
                                 </svg>
                             </a>
@@ -241,28 +241,28 @@
                     <ul class="command-list">
                     <li class="command-item">
                         <a class="command-icon" href="#">
-                                <svg widht="20" height="20">
+                                <svg class="command-svg">
                                     <use href="./images/icons.svg#icon-instagram2"></use>
                                 </svg>
                             </a>
                         </li>
                     <li class="command-item">
                         <a class="command-icon" href="#">
-                                <svg widht="20" height="20">
+                                <svg class="command-svg">
                                     <use href="./images/icons.svg#icon-twitter1"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="command-item">
                             <a class="command-icon" href="#">
-                                <svg widht="20" height="20">
+                                <svg class="command-svg">
                                     <use href="./images/icons.svg#icon-facebook1"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="command-item">
                             <a class="command-icon" href="#">
-                                <svg widht="20" height="20">
+                                <svg class="command-svg">
                                     <use href="./images/icons.svg#icon-linkedin1"></use>
                                 </svg>
                             </a>
@@ -343,28 +343,28 @@
             <ul class="footer-list">
                 <li class="footer-item">
                     <a class="footer-link-icon" href="#">
-                        <svg class="footer-icon" widht="20" height="20">
+                        <svg class="footer-icon">
                             <use href="./images/icons.svg#icon-instagram2"></use>
                         </svg>
                     </a>
                 </li>
                 <li class="footer-item">
                     <a class="footer-link-icon" href="#">
-                        <svg class="footer-icon" widht="20" height="20">
+                        <svg class="footer-icon">
                             <use href="./images/icons.svg#icon-twitter1"></use>
                         </svg>
                     </a>
                 </li>
                 <li class="footer-item">
                     <a class="footer-link-icon" href="#">
-                        <svg class="footer-icon" widht="20" height="20">
+                        <svg class="footer-icon">
                             <use href="./images/icons.svg#icon-facebook1"></use>
                         </svg>
                     </a>
                 </li>
                 <li class="footer-item">
                     <a class="footer-link-icon" href="#">
-                        <svg class="footer-icon" widht="20" height="20">
+                        <svg class="footer-icon">
                             <use href="./images/icons.svg#icon-linkedin1"></use>
                         </svg>
                     </a>
@@ -374,7 +374,7 @@
         <div>
             <p class="footer-title">Подпишитесь на рассылку</p>
             <div class="footer-send">
-                <input class="footer-input" type="email" name="email" id="email" placeholder="E-mail" />
+                <input class="footer-input" type="email" name="email" id="mail" placeholder="E-mail" />
                 <button type="submit" class="button">Подписаться
                     <svg class="footer-iconsend" width="24" height="24">
                         <use href="./images/icons.svg#icon-iconsend"></use>
@@ -395,7 +395,7 @@
                <p class="form-title">Оставьте свои данные, мы вам перезвоним</p>
             <div class="form-field">
                 <label for="name">Имя</label>
-                <input class="form-imput" type="name" name="name" id="name" />
+                <input class="form-imput" type="text" name="name" id="name" />
                 <svg class="form-icon" width="18" height="18">
                     <use href="./images/icons.svg#icon-Vectorname"></use>
                 </svg>
@@ -421,11 +421,8 @@
             </div>
             <div class="form-consent">
                 <input class="checkbox" type="checkbox" name="consent" id="consent" />
-                
+                <span class="checkbox-icon"></span>
                 <label class="checkbox-label" for="consent">
-                    <svg class="checkbox-icon" width="16" height="15">
-                    <use href="./images/icons.svg#icon-Vectorgal"></use>
-                    </svg>
                     Соглашаюсь с рассылкой и принимаю 
                     <a href="#">Условия договора</a></label>
             </div>
